@@ -26,6 +26,9 @@ o improve netlink overrun handling
 o add more verbose error notification when we fail to inject a conntrack
 o rework of the FT-FW approach
 o minor fix of the manpage (Max Wilhelm)
+o remove (misleading) counters and use information from the statistics mode
+o use generic nfct_copy() from libnetfilter_conntrack to update objects
+o use generic nfct_cmp() to compare objects
 
 version 0.9.6 (2008/03/08)
 ------------------------------
